# matchgate-benchmarking

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  ruff.toml
examples/: data_givens.csv  data_mgc.csv  data_plots.ipynb  matchgate_benchmarking.ipynb  matchgate_benchmarking_data_collection.ipynb  matchgate_tomography.ipynb
mgbenchmark/: __init__.py  main.py  utils.py
